Have headers be all caps

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Jack Evoniuk</title>
   </head>
   <body>
-    <h1 id="title"><a href="./index.html">Jack Evoniuk</a></h1>
+    <h1 id="title"><a href="./index.html">JACK EVONIUK</a></h1>
 
     <div align="center" id="song">
       <audio controls loop>
